--- a/package.json
+++ b/package.json
@@ -19,17 +19,16 @@
     "eslint": "8.13.0",
     "eslint-config-htmlacademy": "5.1.2",
     "webpack": "5.72.0",
-    "webpack-cli": "4.9.2"
-  },
-  "engines": {
-    "node": "16"
-  },
-  "dependencies": {
+    "webpack-cli": "4.9.2",
     "@babel/core": "7.17.9",
     "babel-loader": "8.2.4",
     "@babel/preset-env": "7.16.11",
     "copy-webpack-plugin": "10.2.4",
     "webpack-dev-server": "4.8.1"
-    
+  },
+  "engines": {
+    "node": "16"
+  },
+  "dependencies": {
   }
 }
