--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "webpack-cli": "4.9.2",
     "webpack-dev-server": "4.8.1",
     "css-loader": "6.7.1",
-    "style-loader": "3.3.1",
-    "nanoid": "3.3.2"
+    "style-loader": "3.3.1"
   },
   "engines": {
     "node": "16"
